--- a/client/src/pages/CreatorPortal/Orders/Orders.css
+++ b/client/src/pages/CreatorPortal/Orders/Orders.css
@@ -1,78 +1,3 @@
-@media screen and (min-width: 1224px){
-    #creator-orders{
-        width: 70%!important;
-        justify-self: center!important;
-    }
-    .custom-accordion-body{
-        background-color: black!important;
-        color: white;
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr!important;
-    }
+#admin-orders-parent {
+    padding: 20px;
 }
-
-#creator-orders{
-    height: auto;
-    width: 100%;
-    padding: .8rem;
-}
-.order-accordion-header{
-    display: grid;
-    grid-auto-flow: column;
-    justify-content: space-between;
-    width: 100%;
-    padding: 0 20px 0 0;
-}
-.custom-accordion-item{ border-radius: 0!important; }
-.custom-accordion-button, .custom-accordion-button > *{
-    border-radius: 0px!important;
-    transition: .15s!important;
-    box-shadow: none!important;
-}
-.custom-accordion-button:focus, .custom-accordion-button:focus > *,
-    .custom-accordion-button:not(.collaped), .custom-accordion-button:not(.collapsed) > *{
-    background-color: rgb(230,230,230)!important;
-    color: black!important;
-}
-.custom-accordion-body{
-    background-color: black!important;
-    color: white;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-}
-.order-mark-sent{
-    align-self: center;
-}
-.order-details{
-    display: grid;
-    grid-auto-flow: row;
-    justify-self: end;
-}
-.order-user{
-    display: grid;
-    grid-auto-flow: row;
-    justify-self: start;
-}
-.order-products{
-    display: grid;
-    grid-auto-flow: row;
-    justify-self: center;
-}
-.order-address{
-    display: flex;
-    flex-direction: column;
-    font-size: .9rem;
-}
-.order{
-    width: 100%;
-    background-color: black;
-    color: white;
-    grid-template-columns: 40% 20% 15% 25%;
-    grid-template-areas: "items date price sent";
-    display: grid;
-    padding: 1rem 0;
-}
-.order-items{ grid-area: items; }
-.order-date{ grid-area: date; }
-.order-price{ grid-area: price; }
-.order-sent{ grid-area: sent; }
