--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -1,39 +1,19 @@
-@media screen and (min-width: 1224px) {
-    #profile{
-        width: 40%!important;
-        justify-self: center;
-        align-self: center;
-    }
-}
-.profile-order-name{
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-}
-.profile-order-item{
-    display: grid;
-    grid-auto-flow: column;
-    justify-content: space-between;
-    padding: 0 10px 0 0;
-}
-.profile-order-body{
-    background-color: black !important;
-    color: white;
-}
-#profile{
-    height: 90vh;
+#profile-parent {
     width: 100vw;
+    height: 100%;
     display: grid;
-    align-content: center;
-    padding: 1.5rem;
+    align-items: center;
+    padding: 10px;
 }
-.order-names{
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+
+#profile-form {
+    padding: 20px;
+    background-color: rgb(230, 230, 230);
 }
-.profile-page-order{
-    display: grid;
-    grid-template-columns: 70% auto auto;
-    font-size: .9rem;
+
+@media(min-width: 992px) {
+    #profile-parent {
+        width: 40vw !important;
+        margin: auto;
+    }
 }
