--- a/client/src/pages/About/About.css
+++ b/client/src/pages/About/About.css
@@ -10,6 +10,7 @@
     padding: 0rem 1rem 2rem 1rem;
     display: grid;
     align-items: center;
+    margin: auto;
 }
 #about-content{
     font-weight: 100;
