--- a/client/src/pages/CreatorPortal/Products/Products.css
+++ b/client/src/pages/CreatorPortal/Products/Products.css
@@ -1,30 +1,21 @@
-@media screen and (min-width: 1224px) {
-    #creator-portal-product-list{
-        display: grid;
-        grid-template-columns: 25% 25% 25% 25%;
-        row-gap: 1rem;
-    }
-    .product{
-        margin-right: 1rem;
-    }
-}
-@media screen and (min-width: 700px) and (max-width: 1223px) {
-    .product{
-        height: 80vh!important;
-    }
+#admin-products-parent {
+    padding: 20px;
 }
 
-#creator-products-portal{
-    padding: 0rem 2rem 2rem 2rem;
-}
-.creator-portal-product-edit-group{
+.admin-product {
     display: grid;
-    width: 100%;
-    grid-template-columns: 50% 50%;
-    padding: 0rem 1rem;
-    margin-bottom: .5rem;
+    grid-template-rows: 35vh auto;
+    grid-template-areas: "image" "details";
+    padding: 10px;
+    grid-row-gap: 5px;
+    background-color: rgb(230, 230, 230);
+    box-shadow: 1px 1px #3e3e3e, 2px 2px #3e3e3e, 3px 3px #3e3e3e, 4px 4px #3e3e3e, 5px 5px #3e3e3e, 6px 6px #3e3e3e, 7px 7px #3e3e3e, 8px 8px #3e3e3e;
+    transform: translateX(-4px) translateY(-4px);
 }
-.border2{
-    border-width: 3px!important;
-    border-color: rgba(10, 10, 10, 0.75)!important;
+
+.admin-product-image {
+    grid-area: image;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
