--- a/client/src/pages/CreatorPortal/Upload/Upload.css
+++ b/client/src/pages/CreatorPortal/Upload/Upload.css
@@ -1,83 +1,53 @@
-@media screen and (min-width: 1224px) {
-    #upload{
-        width: 40%!important;
-        justify-self: center!important;
+#admin-upload-form {
+    padding: 15px;
+}
+
+#admin-upload-product-name {
+    font-size: 1.5rem;
+    color: black;
+}
+
+#admin-upload-product-name:focus {
+    box-shadow: none;
+}
+
+#admin-upload-initial-slide-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
+
+#admin-upload-images {
+    height: 35vh;
+}
+
+#admin-upload-images-slides {
+    height: 100%;
+}
+
+.admin-upload-slide-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.admin-upload-product-size {
+    display: grid;
+    grid-template-columns: auto min-content;
+}
+
+@media(min-width: 992px) {
+    #admin-upload-form {
+        width: 50vw;
+        margin: auto;
     }
 }
 
-#upload{
-    height: fit-content;
-    padding: 0 3rem 2rem;
-}
-#no-images{
-    width: 100%!important;
-    height: 100%;
-    background-color: rgb(220,220,220);
-    display: grid;
-    place-content: center;
-    cursor: pointer;
-    transition: .15s;
-}
-#no-images:hover{ background-color: rgb(205,205,205); }
-#product-images {
-    display: grid;
-    width: 100%;
-    grid-auto-flow: row;
-}
-
-.product-upload-image{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-#image-order{
-    display: grid;
-    width: 100%;
-    grid-template-columns: 25% 25% 25% 25%;
-}
-.order-image-parent{
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 10vh;
-    grid-template-areas: "order";
-}
-.image-order-picture{
-    width: 100%;
-    height: 100%;
-    grid-area: order;
-    object-fit: cover;
-}
-.image-order-element{
-    grid-area: order;
-    text-align: center;
-    font-size: 1.5rem;
-    background-color: rgba(255,255,255,0.4);
-    border-radius: 0!important;
-}
-.image-order-element:focus{
-    background-color: rgba(255,255,255,0.5)!important;
-    box-shadow: none!important;
-    border: 3px solid black;
-}
-.no-outline{
-    outline: none!important;
-}
-.product-upload-remove{
-    position: relative;
-    top: calc(0px - 30vh / 2);
-    left: 0;
-    z-index: 100;
-    background-color: white!important;
-}
-.date-input-upload-form{
-    border: 1px solid black!important;
-    border-radius: 0px;
-    font-size: .9rem!important;
-    padding: .4rem .8rem .4rem .8rem;
-    width: 100%;
-    box-shadow: none!important;
-    outline: none!important;
-}
-.date-input-upload-form:focus{
-    border-width: 3px!important;
+@media(min-width: 1400px) {
+    #admin-upload-form {
+        width: 40vw;
+        margin: auto;
+    }
 }
