--- a/client/src/pages/Login/Login.css
+++ b/client/src/pages/Login/Login.css
@@ -1,36 +1,43 @@
-@media screen and (min-width: 1224px) {
-    #login{
-        width: 30vw!important;
-        place-self: center!important;
+#login-form {
+    padding: 25px 20px;
+    background-color: rgb(230, 230, 230);
+    border-radius: 5px;
+}
+
+#login-parent {
+    height: 100%;
+    width: 100vw;
+    display: grid;
+    align-items: center;
+    padding: 20px;
+}
+
+.instagram-button {
+    background: linear-gradient(45deg, #405de6, #5851db 20%, #833ab4 40%, #c13584 60%, #e1306c 80%, #fd1d1d 100%);
+    border: none;
+    padding: 6px;
+}
+
+#create-account-button {
+    cursor: pointer;
+}
+
+#create-account-parent {
+    width: 100vw;
+    height: 100%;
+    display: grid;
+    align-items: center;
+    padding: 10px;
+}
+
+@media(min-width: 992px) {
+    #login-parent {
+        width: 48vw !important;
+        margin: auto;
     }
 }
-
-.forgot-password-link{
-    font-size: .8rem!important;
-    text-decoration: underline;
-    cursor: pointer;
-    transition: .15s;
-}
-.forgot-password-link:hover{
-    color: rgb(100,100,100);
-}
-
-#login{
-    width: 100vw;
-    height: 90vh;
-    display: grid;
-    align-content: center;
-    padding: 3rem;
-}
-#no-account{
-    width: 100%;
-    text-align: center;
-}
-#create-account-link{
-    color: rgb(202, 0, 0);
-    cursor: pointer;
-    transition: .15s;
-}
-#create-account-link:hover{
-    color: rgb(140,0,0);
+@media(min-width: 1200px) {
+    #login-parent {
+        width: 36vw!important;
+    }
 }
