--- a/client/src/pages/PaymentDetails/PaymentDetails.css
+++ b/client/src/pages/PaymentDetails/PaymentDetails.css
@@ -1,25 +1,25 @@
-@media screen and (min-width: 1224px){
-    #payment-details{
-        width: 40%!important;
-        place-self: center!important;
+#payment-details-parent {
+    width: 100vw;
+    height: 100%;
+    padding: 10px;
+}
+
+@media(min-width: 1400px) {
+    #payment-details-parent {
+        width: 40vw !important;
+        margin: auto;
     }
 }
 
-#payment-details{
-    height: auto;
-    width: 100%;
-    padding: 1.5rem;
-    display: grid;
-    grid-template-rows: auto 10vh;
+@media(min-width: 1200px) {
+    #payment-details-parent {
+        width: 50vw;
+        margin: auto;
+    }
 }
-#payment-details-info{
-    min-height: 70vh;
-}
-#payment-details-subtotals{
-    font-size: 1rem;
-    font-weight: 900;
-}
-#payment-details-total{
-    display: grid;
-    grid-template-columns: auto auto;
+
+#payment-details-form {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
 }
