Added instagram api support and safari login fixed

--- a/client/src/pages/CreatorPortal/LibraryEdit/CreatorLibraryEdit.css
+++ b/client/src/pages/CreatorPortal/LibraryEdit/CreatorLibraryEdit.css
@@ -20,6 +20,7 @@
 #admin-library-outfit-image-parent {
     display: grid;
     grid-template-areas: "adminLibraryOutfitImage";
+    cursor: pointer;
 }
 
 #admin-library-outfit-image-text {
