--- a/client/src/pages/Product/Product.css
+++ b/client/src/pages/Product/Product.css
@@ -28,4 +28,11 @@
         width: 40vw;
         place-content: center;
     }
+    .product-size-parent{
+        width: 20vw!important;
+    }
+}
+
+.product-size-parent{
+    width: 45vw;
 }
