--- a/client/src/components/ActivateAccount/ActivateAccount.css
+++ b/client/src/components/ActivateAccount/ActivateAccount.css
@@ -8,6 +8,6 @@
     box-shadow: none!important;
     border-radius: 0!important;
     border: black;
-    padding: 4px 0px 4px 0px;
+    padding: 5px;
 }
 .radius-zero{ border-radius: 0!important; }
