--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -175,6 +175,8 @@
     font-size: 1.5rem;
     transition: .15s;
     cursor: pointer;
+    position: absolute;
+    right: 15px;
 }
 .desktop-shopping-cart:hover{
     background-color: rgb(230,230,230)!important;
@@ -190,4 +192,25 @@
     .desktop-shopping-cart {
         display: none;
     }
+}
+
+.mobile-navigation-logout-parent{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+.mobile-navigation-logout{
+    font-size: 1.2rem;
+    padding: 4px 8px;
+    cursor: pointer;
+    transition: .15s;
+}
+.mobile-navigation-logout:hover{
+    background-color: black;
+    color: white;
+}
+#normal-nav{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
