--- a/client/src/index.css
+++ b/client/src/index.css
@@ -211,3 +211,17 @@ input, select {
   color: white!important;
 }
 .pointer{ cursor: pointer; }
+
+input:focus{
+  border-color: rgba(0,0,0,0.5)!important;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(0, 0, 0, 0.6)!important;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(0, 0, 0, 0.6)!important;
+  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(0, 0, 0, 0.6)!important;
+  outline: 0 none!important;
+}
+
+.no-box-shadow, .no-box-shadow:focus{
+  box-shadow: none!important;
+  -moz-box-shadow: none!important;
+  -webkit-box-shadow: none!important;
+}
