--- a/client/src/pages/CreatorPortal/Customs/CreatorCustoms.css
+++ b/client/src/pages/CreatorPortal/Customs/CreatorCustoms.css
@@ -1,6 +1,7 @@
 #creator-customs{
     display: grid;
     grid-template-columns: 25vw 75vw;
+    grid-template-rows: 100%;
     grid-template-areas: "inbox chat";
     height: 100%;
     max-height: 100%;
@@ -50,26 +51,30 @@
 }
 
 #creator-customs-chatbox-parent{
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: 94% 6%;
+    grid-template-areas: "chat" "input";
+    height: 100%;
     grid-area: chat;
+    background-color: rgb(30,30,30);
 }
 
 #creator-customs-chatbox-input{
-    margin-top: auto;
+    grid-area: input;
     padding: 5px;
-}
-#creator-customs-chatbox-parent{
-    background-color: rgb(30,30,30);
+    place-self: center;
+    width: 100%;
 }
 #accept-custom{
     background-color: rgb(30,30,30);
 
 }
 #creator-customs-chatbox{
+    grid-area: chat;
     padding: 4px 8px 4px 8px;
     display: flex;
     flex-direction: column;
+    overflow: scroll;
 }
 .creator-customs-message{
     color: black;
